--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "num run build",
-    "deploy": "gh-page -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
