최종 완성 코드

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/motion2015/cloneMovie_react2021"
+  "homepage": "https://motion2015.github.io/cloneMovie_react2021"
 }
